tests/health/gold/sdk/tests__lsp__type-definition-test.toit.gold
tests/lsp/type-definition-test.toit:95:8: error: Invalid type
bad -> fun:
       ^~~
tests/lsp/type-definition-test.toit:101:9: error: Invalid type
bad x / fun:
        ^~~
tests/lsp/type-definition-test.toit:108:30: error: Invalid type
bad2 -> prefix.ImportedClass.named:
                             ^~~~~
tests/lsp/type-definition-test.toit:114:19: error: Ambiguous resolution of type: 'ImportedClass'
bad3 -> ambiguous.ImportedClass:
                  ^~~~~~~~~~~~~
tests/lsp/definition-imported.toit:5:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/definition-imported2.toit:9:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/type-definition-test.toit:120:19: error: Invalid type
bad4 -> SomeClass.static-fun:
                  ^~~~~~~~~~
tests/lsp/type-definition-test.toit:126:19: error: Invalid type
bad5 -> SomeClass.static-fun:
                  ^~~~~~~~~~
tests/lsp/type-definition-test.toit:132:19: error: Invalid type
bad6 -> SomeClass.non-existent:
                  ^~~~~~~~~~~~
